--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
                       </li>
                       <li>
                         <span class="ion-email"></span>
-                        abdoullah.elddeb@gamil.com
+                        abdoullah.eldeeb@gamil.com
                       </li>
                     </ul>
                   </div>
@@ -1035,5 +1035,6 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 </body>
+
 
 </html>
