--- a/CareerPath/frontend.html
+++ b/CareerPath/frontend.html
@@ -159,7 +159,7 @@
                   <div class="row">
                     <div class="col-sm-8">
                       <h2 class="w-title">
-                        <a href="https://abdoullah.com/Projects/Bondi"
+                        <a href="https://abdoullaheldeeb.github.io/Bondi/"
                           >Template Bondi</a
                         >
                       </h2>
@@ -191,7 +191,7 @@
                   <div class="row">
                     <div class="col-sm-8">
                       <h2 class="w-title">
-                        <a href="https://abdoullah.com/Projects/Forstalk"
+                        <a href="https://abdoullaheldeeb.github.io/Forstalk/"
                           >Template Forstalk</a
                         >
                       </h2>
@@ -230,7 +230,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">
                         <a
-                          href="https://abdoullah.com/Projects/dashborad-eldeeb"
+                          href="https://abdoullaheldeeb.github.io/Dashboard/"
                           >Template ELdeeb Dashborad</a
                         >
                       </h2>
@@ -262,7 +262,7 @@
                     <div class="col-sm-8">
                       <h2 class="w-title">
                         <a
-                          href="https://abdoullah.com/Projects/Photo-Editing-Program"
+                          href="https://abdoullaheldeeb.github.io/Photo-Editing-Program/"
                           >Template Photo Editing Program</a
                         >
                       </h2>
