--- a/index.html
+++ b/index.html
@@ -985,6 +985,10 @@
                         <a href="https://www.linkedin.com/in/abdoullah-eldeeb-9082b9248/"><span class="ico-circle"><i
                               class="ion-social-linkedin"></i></span></a>
                       </li>
+                      <li>
+                        <a href="https://github.com/abdoullaheldeeb"><span class="ico-circle"><i
+                              class="ion-social-github"></i></span></a>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -1035,6 +1039,5 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 </body>
-
 
 </html>
