--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <h1 class="intro-title mb-4">I am Abdoullah ELdeeb</h1>
           <p class="intro-subtitle">
             <span class="text-slider-items">Interested in Software Engineering, Website Development,
-              Website Design, Front End Development, Back End Development,
+              Website Design, Front End Development, Back End Development,Dev Soc Ops,
               Search Engine Optimization (SEO), Digital Marketing, Graphic
               Design, and Cyber ​​Security.</span><strong class="text-slider"></strong>
           </p>
@@ -284,7 +284,7 @@
                 </div>
               </div>
             </div>
-            <a class="button button-a button-big button-rouded" href="./cv/">Download Cv</a>
+            <a class="button button-a button-big button-rouded" href="https://api.whatsapp.com/send/?phone=%2B201003702328&text&type=phone_number&app_absent=0">Download Cv</a>
           </div>
         </div>
       </div>
@@ -358,7 +358,7 @@
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
                 adipisci eaque autem fugiat! Quia, provident vitae! Magni
-                tempora perferendis eum non provident.
+                tempora perferendis eum non provident..
               </p>
             </div>
           </div>
@@ -366,10 +366,10 @@
         <div class="col-md-4">
           <div class="service-box">
             <div class="service-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
+              <span class="ico-circle"><i class="ion-code"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Graphic Design</h2>
+              <h2 class="s-title">Dev Soc Ops</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
                 adipisci eaque autem fugiat! Quia, provident vitae! Magni
@@ -384,11 +384,10 @@
               <span class="ico-circle"><i class="ion-stats-bars"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Marketing Services</h2>
+              <h2 class="s-title">Marketing Services & Graphic Design</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-                adipisci eaque autem fugiat! Quia, provident vitae! Magni
-                tempora perferendis eum non provident.
+                adipisci eaque autem fugiat! Quia, provident vitae..
               </p>
             </div>
           </div>
@@ -467,19 +466,19 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/front-end-developer-typographic-header_277904-11487.png" ata-lightbox="gallery-mf">
+            <a href="./img/What-is-a-Full-Stack-Developer-jpg.png" ata-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/front-end-developer-typographic-header_277904-11487.png" alt="" class="img-fluid" />
+                <img src="./img/What-is-a-Full-Stack-Developer-jpg.png" alt="" class="img-fluid" />
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">
-                      <a href="./CareerPath/frontend.html">Front End Engineer
+                      <a href="./CareerPath/Full-Stack.html">Full Stack Engineer
                       </a>
                     </h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web front-end developer.
+                      <span class="w-ctegory">Web Full Stack Engineer.
                       </span>
                       <span class="w-date">1 Jan 2023</span>
                     </div>
@@ -509,6 +508,35 @@
                     </h2>
                     <div class="w-more">
                       <span class="w-ctegory">Cybersecurity Engineer
+                      </span>
+                      <span class="w-date">1 Jan 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="./img/devsecops.jpg" ata-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="./img/devsecops.jpg" alt="" class="img-fluid" />
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">
+                      <a href="./CareerPath/DevSocOps.html">DevSocOps Engineer
+                      </a>
+                    </h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">DevSocOps Engineer
                       </span>
                       <span class="w-date">1 Jan 2025</span>
                     </div>
