--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">
-                      <a href="./CareerPath/Full-Stack.html">Full Stack Engineer
+                      <a href="./CareerPath/full-stack.html">Full Stack Engineer
                       </a>
                     </h2>
                     <div class="w-more">
@@ -1067,5 +1067,6 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 </body>
+
 
 </html>
