--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta name="email" content="abdoullah.eldeeb@gmail.com" />
   <link rel="canonical" href="https://abdoullah.com" />
   <!-- Favicons -->
-  <link href="img/intro-bg.jpg" rel="icon" />
-  <link href="img/testimonial-2.jpg" rel="apple-touch-icon" />
+  <link href="./img/abdallah-cv.jpg" rel="icon" />
+  <link href="./img/abdallah-cv.jpg" rel="apple-touch-icon" />
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -104,7 +104,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="" />
+                      <img src="./img/abdallah-cv.jpg" class="img-fluid rounded b-shadow-a" alt="" />
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -251,35 +251,27 @@
                     <h5 class="title-left">About me</h5>
                   </div>
                   <p class="lead">
-                    I'm Abdoullah ELdeeb, interested in programming in general and cybersecurity. I have extensive
-                    experience
-                    in developing, designing, and programming websites and applications. I also have extensive
-                    experience
-                    using modern web technologies such as HTML5, CSS3, JavaScript, Bootstrap Framework, React, and
-                    JQuery. In
-                    addition to my experience working with databases such as SQL using PHP and MongoDB using Node.js,
-                    building
-                    websites using WordPress (including Elementor, Elementor Pro, and other plugins), and artificial
-                    intelligence using GPT, I seek to gain more knowledge and experience to become a software, security,
-                    and
-                    operations (DevSecOps) Engineer. I also have skills in using Adobe programs such as Photoshop and
-                    Illustrator. I have a creative mind that works to transform innovative designs into effective and
-                    engaging
-                    user interfaces. I am also familiar with best practices in user experience and interface design to
-                    ensure
-                    usability and accessibility. I have strong creative thinking and problem-solving skills and can
-                    easily
-                    understand user needs and translate them into effective designs. I also have an eye for detail and
-                    focus
-                    on the quality of my programming. I consider myself passionate about technological innovation and
-                    keeping
-                    up with the latest trends in web development, such as front-end and back-end technologies,
-                    programming,
-                    and cybersecurity in general. I am willing to learn and adapt to rapid changes in this evolving
-                    field. I
-                    am also committed to writing secure and robust code and following cybersecurity best practices to
-                    protect
-                    applications and user data.
+                    I am Abdullah Aldeeb, a full-stack web developer with a passion for cybersecurity.
+
+I have extensive experience designing, developing, and programming modern, responsive websites and web applications using technologies such as HTML5, CSS3, Sass, Tailwind CSS, JavaScript, Bootstrap, React.js, React Native, Next.js, jQuery, AJAX, JSON, and Python.
+
+My experience also includes working with databases such as SQL (using PHP) and MongoDB (using Node.js and Express), as well as building and customizing WordPress websites using Elementor, Elementor Pro, and various plugins.
+
+I also have practical experience in AI integration and automation using technologies such as GPT and Python scripting.
+
+I aspire to become a DevSecOps Engineer, combining my skills in software development, cybersecurity, and operations to build secure, scalable, and efficient systems.
+
+I am committed to writing secure, maintainable, and well-tested code, following cybersecurity best practices and unit testing to ensure reliability and data protection. I have hands-on experience with unit and integration testing tools such as Jest, Mocha, and Pytest, which help maintain code quality and stability throughout the development lifecycle.
+
+I also have experience using source control tools such as Git and GitHub, enabling effective collaboration and release management in development environments.
+
+In addition to programming, I am proficient in Adobe Photoshop, Illustrator, and Figma, enabling me to transform creative ideas into visually appealing and user-friendly interfaces.
+
+I have a deep understanding of UX/UI principles, ensuring usability, accessibility, and a high level of design.
+
+With my creative mindset, problem-solving skills, and attention to detail, I strive to deliver innovative solutions that combine technology, security, and design excellence.
+
+I am passionate about technological innovation and am constantly learning to stay abreast of the latest trends in front-end and back-end development and cybersecurity.
                   </p>
                 </div>
               </div>
@@ -474,7 +466,7 @@
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">
-                      <a href="./CareerPath/full-stack.html">Full Stack Engineer
+                      <a href="./CareerPath/Full-Stack.html">Full Stack Engineer
                       </a>
                     </h2>
                     <div class="w-more">
@@ -1067,6 +1059,5 @@
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
 </body>
-
 
 </html>
