--- a/CareerPath/full-stack.html
+++ b/CareerPath/full-stack.html
@@ -12,8 +12,8 @@
   <meta name="email" content="abdoullah.eldeeb@gmail.com" />
   <link rel="canonical" href="https://abdoullah.com" />
   <!-- Favicons -->
-  <link href="../img/intro-bg.jpg" rel="icon" />
-  <link href="../img/testimonial-2.jpg" rel="apple-touch-icon" />
+  <link href="./img/abdallah-cv.jpg" rel="icon" />
+  <link href="./img/abdallah-cv.jpg" rel="apple-touch-icon" />
 
   <!-- Bootstrap CSS File -->
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -220,34 +220,6 @@
                     </h2>
                     <div class="w-more">
                       <span class="w-ctegory">Design websites using html and css with JavaScript
-                      </span>
-                      <span class="w-date">3 Dec. 2023</span>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="work-box">
-            <a href="../img/front-end-developer-typographic-header_277904-11487.png" data-lightbox="gallery-mf">
-              <div class="work-img">
-                <img src="../img/front-end-developer-typographic-header_277904-11487.png" alt="" class="img-fluid" />
-              </div>
-              <div class="work-content">
-                <div class="row">
-                  <div class="col-sm-8">
-                    <h2 class="w-title">
-                      <a href="https://www.diarmakkah.com/">Tourism company website diarmakkah</a>
-                    </h2>
-                    <div class="w-more">
-                      <span class="w-ctegory">Tourism company website diarmakkah
                       </span>
                       <span class="w-date">3 Dec. 2023</span>
                     </div>
