--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ I am passionate about technological innovation and am constantly learning to sta
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">
-                      <a href="./CareerPath/Full-Stack.html">Full Stack Engineer
+                      <a href="./CareerPath/full-Stack.html">Full Stack Engineer
                       </a>
                     </h2>
                     <div class="w-more">
@@ -1061,3 +1061,4 @@ I am passionate about technological innovation and am constantly learning to sta
 </body>
 
 </html>
+
