--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="موقع عبدالله الديب , عبدالله الديب , موقع عبدالله متولي الديب , الديب , موقه الكتروني , محفظه عبالله الديب , موقع الاكنروني خاص بي عبدالله الديب , عبدالله الديب و موقع الاكتروني , abdoullah eldeeb , abdoullah metwalli eldeeb , eldeeb , web site abdoullah eldeeb , website abdouallah eldeeb , website , abdoullah metwalli , metwalli eldeeb " />
   <meta name="email" content="abdoullah.eldeeb@gmail.com" />
-  <link rel="canonical" href="https://abdoullah.com" />
+  <link rel="canonical" href="https://abdoullaheldeeb.github.io/" />
   <!-- Favicons -->
   <link href="./img/abdallah-cv.jpg" rel="icon" />
   <link href="./img/abdallah-cv.jpg" rel="apple-touch-icon" />
@@ -40,7 +40,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="https://abdoullah.com">www.abdoullah.com</a>
+      <a class="navbar-brand js-scroll" href="https://abdoullaheldeeb.github.io/">abdoullah ELdeeb</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -546,247 +546,6 @@ I am passionate about technological innovation and am constantly learning to sta
       </div>
     </div>
   </section>
-  <!-- <section id="my-projects" class="portfolio-mf sect-pt4 route">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">My projects</h3>
-              <p class="subtitle-a">
-                If you do it right, it will last forever.
-              </p>
-              <div class="line-mf"></div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="img/bootstrap-logo (1).jpg" data-lightbox="gallery-mf">
-                <div class="work-img">
-                  <img
-                    src="img/bootstrap-logo (1).jpg"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">
-                        <a href="https://abdoullah.com/Projects/Bondi"
-                          >Template Bondi</a
-                        >
-                      </h2>
-                      <div class="w-more">
-                        <span class="w-ctegory"
-                          >Design websites using html and css with bootstrap
-                          framework</span
-                        >
-                        <span class="w-date">1 Jan. 2023</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="img/photo-css.jpg" data-lightbox="gallery-mf">
-                <div class="work-img">
-                  <img src="img/photo-css.jpg" alt="" class="img-fluid" />
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">
-                        <a href="https://abdoullah.com/Projects/Forstalk"
-                          >Template Forstalk</a
-                        >
-                      </h2>
-                      <div class="w-more">
-                        <span class="w-ctegory"
-                          >Design websites using html and css with JavaScript
-                        </span>
-                        <span class="w-date">30 Apr. 2023</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a
-                href="img/Digital-dashboard-example.png"
-                data-lightbox="gallery-mf"
-              >
-                <div class="work-img">
-                  <img
-                    src="img/Digital-dashboard-example.png"
-                    alt=""
-                    class="img-fluid"
-                  />
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">
-                        <a
-                          href="https://abdoullah.com/Projects/dashborad-eldeeb"
-                          >Template ELdeeb Dashborad</a
-                        >
-                      </h2>
-                      <div class="w-more">
-                        <span class="w-ctegory"
-                          >Design websites using html and css with JavaScript
-                        </span>
-                        <span class="w-date">1 Oct. 2023</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="img/eldeebAds.png" data-lightbox="gallery-mf">
-                <div class="work-img">
-                  <img src="img/eldeebAds.png " alt="" class="img-fluid" />
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">
-                        <a href="https://www.facebook.com/eldeeb.Ads.Marketing"
-                          >ELdeeb Ads & Markiting Agency</a
-                        >
-                      </h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Marketing Agency</span> /
-                        <span class="w-date">1 Jan. 2024</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="img/Editing.jpeg" data-lightbox="gallery-mf">
-                <div class="work-img">
-                  <img src="img/Editing.jpeg" alt="" class="img-fluid" />
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">
-                        <a
-                          href="https://abdoullah.com/Projects/Photo-Editing-Program"
-                          >Template Photo Editing Program</a
-                        >
-                      </h2>
-                      <div class="w-more">
-                        <span class="w-ctegory"
-                          >Design websites using html and css with JavaScript
-                        </span>
-                        <span class="w-date">3 Dec. 2023</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="img/eldeebSoftware.png" data-lightbox="gallery-mf">
-                <div class="work-img">
-                  <img src="img/eldeebSoftware.png" alt="" class="img-fluid" />
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <h2 class="w-title">
-                        <a href="https://www.facebook.com/eldeeb.software"
-                          >Eldeeb Software Company</a
-                        >
-                      </h2>
-                      <div class="w-more">
-                        <span class="w-ctegory">Software Company</span> /
-                        <span class="w-date">1 Jan. 2024</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="work-box">
-              <a href="img/eldeebAll.png" data-lightbox="gallery-mf">
-                <div class="work-img">
-                  <img src="img/eldeebAll.png" alt="" class="img-fluid" />
-                </div>
-                <div class="work-content">
-                  <div class="row">
-                    <div class="col-sm-8">
-                      <a href="https://www.facebook.com/eldeeb.technologyy"
-                        >Eldeeb technologyy Foundation</a
-                      >
-                      <div class="w-more">
-                        <span class="w-ctegory">Technologyy Foundation</span>
-                        <span class="w-date">1 Jan. 2024</span>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                      <div class="w-like">
-                        <span class="ion-ios-plus-outline"></span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-  <!--/ Section Portfolio End /-->
 
   <!--/ Section Testimonials Star /-->
   <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
@@ -1029,7 +788,7 @@ I am passionate about technological innovation and am constantly learning to sta
               </p>
               <div class="credits">
                 Design and Programming
-                <a href="https://abdoullah.com">Abdoullah Eldeeb</a>
+                <a href="https://abdoullaheldeeb.github.io/">Abdoullah Eldeeb</a>
               </div>
             </div>
           </div>
