--- a/CareerPath/full-stack.html
+++ b/CareerPath/full-stack.html
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="موقع عبدالله الديب , عبدالله الديب , موقع عبدالله  الديب , الديب , موقه الكتروني , محفظه عبالله الديب , موقع الاكنروني خاص بي عبدالله الديب , عبدالله الديب و موقع الاكتروني , abdoullah eldeeb , abdoullah metwalli eldeeb , eldeeb , web site abdoullah eldeeb , website abdouallah eldeeb , website , abdoullah metwalli , metwalli eldeeb " />
   <meta name="email" content="abdoullah.eldeeb@gmail.com" />
-  <link rel="canonical" href="https://abdoullah.com" />
+  <link rel="canonical" href="https://abdoullaheldeeb.github.io/" />
   <!-- Favicons -->
   <link href="./img/abdallah-cv.jpg" rel="icon" />
   <link href="./img/abdallah-cv.jpg" rel="apple-touch-icon" />
@@ -41,7 +41,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll d-block text-center w-100" href="https://abdoullah.com">www.abdoullah.com</a>
+      <a class="navbar-brand js-scroll d-block text-center w-100" href="https://abdoullaheldeeb.github.io/">abdoullah ELdeeb</a>
       <!-- <button
           class="navbar-toggler collapsed"
           type="button"
@@ -455,7 +455,7 @@
               </p>
               <div class="credits">
                 Design and Programming
-                <a href="https://abdoullah.com">Abdoullah Eldeeb</a>
+                <a href="https://abdoullaheldeeb.github.io/">Abdoullah Eldeeb</a>
               </div>
             </div>
           </div>
