--- a/CareerPath/full-stack.html
+++ b/CareerPath/full-stack.html
@@ -424,7 +424,7 @@
                               class="ion-social-instagram"></i></span></a>
                       </li>
                       <li>
-                        <a href="https://x.com/abdoullah_deeb"><span class="ico-circle"><i
+                        <a href="https://x.com/abdoullaheldeeb"><span class="ico-circle"><i
                               class="ion-social-twitter"></i></span></a>
                       </li>
                       <li>
