--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@ I am passionate about technological innovation and am constantly learning to sta
                               class="ion-social-instagram"></i></span></a>
                       </li>
                       <li>
-                        <a href="https://x.com/abdoullah_deeb"><span class="ico-circle"><i
+                        <a href="https://x.com/abdoullaheldeeb"><span class="ico-circle"><i
                               class="ion-social-twitter"></i></span></a>
                       </li>
                       <li>
