--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="موقع عبدالله الديب , عبدالله الديب , موقع عبدالله متولي الديب , الديب , موقه الكتروني , محفظه عبالله الديب , موقع الاكنروني خاص بي عبدالله الديب , عبدالله الديب و موقع الاكتروني , abdoullah eldeeb , abdoullah metwalli eldeeb , eldeeb , web site abdoullah eldeeb , website abdouallah eldeeb , website , abdoullah metwalli , metwalli eldeeb " />
   <meta name="email" content="abdoullah.eldeeb@gmail.com" />
-  <link rel="canonical" href="https://abdoullaheldeeb.github.io/" />
+  <link rel="canonical" href="https://AbdoullahELdeeb.github.io" />
   <!-- Favicons -->
   <link href="./img/abdallah-cv.jpg" rel="icon" />
   <link href="./img/abdallah-cv.jpg" rel="apple-touch-icon" />
@@ -40,7 +40,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="https://abdoullaheldeeb.github.io/">abdoullah ELdeeb</a>
+      <a class="navbar-brand js-scroll" href="https://AbdoullahELdeeb.github.io">Abdoullah ELdeeb</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -251,32 +251,49 @@
                     <h5 class="title-left">About me</h5>
                   </div>
                   <p class="lead">
-                    I am Abdullah Aldeeb, a full-stack web developer with a passion for cybersecurity.
+                    I am Abdoullah ELdeeb, a Full-Stack Software Engineer with a deep passion for software development
+                    and building secure, scalable, and high-performance web applications.
 
-I have extensive experience designing, developing, and programming modern, responsive websites and web applications using technologies such as HTML5, CSS3, Sass, Tailwind CSS, JavaScript, Bootstrap, React.js, React Native, Next.js, jQuery, AJAX, JSON, and Python.
+                    I have extensive experience designing, developing, and programming modern, responsive websites and
+                    web applications using technologies such as HTML5, CSS3, Sass, Tailwind CSS, JavaScript, Bootstrap,
+                    React.js, React Native, Next.js, jQuery, AJAX, JSON, and Python.
 
-My experience also includes working with databases such as SQL (using PHP) and MongoDB (using Node.js and Express), as well as building and customizing WordPress websites using Elementor, Elementor Pro, and various plugins.
+                    My experience also includes working with databases such as SQL (using PHP) and MongoDB (using
+                    Node.js and Express), as well as building and customizing WordPress websites using Elementor,
+                    Elementor Pro, and various plugins.
 
-I also have practical experience in AI integration and automation using technologies such as GPT and Python scripting.
+                    I also have practical experience in AI integration and automation using technologies such as GPT and
+                    Python scripting.
 
-I aspire to become a DevSecOps Engineer, combining my skills in software development, cybersecurity, and operations to build secure, scalable, and efficient systems.
+                    I aspire to become a DevSecOps Engineer, combining my skills in software development, operations,
+                    and security to build secure, scalable, and efficient systems.
 
-I am committed to writing secure, maintainable, and well-tested code, following cybersecurity best practices and unit testing to ensure reliability and data protection. I have hands-on experience with unit and integration testing tools such as Jest, Mocha, and Pytest, which help maintain code quality and stability throughout the development lifecycle.
+                    I am committed to writing secure, maintainable, and well-tested code, following best practices and
+                    unit testing to ensure reliability and performance. I have hands-on experience with unit and
+                    integration testing tools such as Jest, Mocha, and Pytest, which help maintain code quality and
+                    stability throughout the development lifecycle.
 
-I also have experience using source control tools such as Git and GitHub, enabling effective collaboration and release management in development environments.
+                    I also have experience using source control tools such as Git and GitHub, enabling effective
+                    collaboration and release management in development environments.
 
-In addition to programming, I am proficient in Adobe Photoshop, Illustrator, and Figma, enabling me to transform creative ideas into visually appealing and user-friendly interfaces.
+                    In addition to programming, I am proficient in Adobe Photoshop, Illustrator, and Figma, enabling me
+                    to transform creative ideas into visually appealing and user-friendly interfaces.
 
-I have a deep understanding of UX/UI principles, ensuring usability, accessibility, and a high level of design.
+                    I have a deep understanding of UX/UI principles, ensuring usability, accessibility, and a high level
+                    of design.
 
-With my creative mindset, problem-solving skills, and attention to detail, I strive to deliver innovative solutions that combine technology, security, and design excellence.
+                    With my creative mindset, problem-solving skills, and attention to detail, I strive to deliver
+                    innovative solutions that combine technology, functionality, and design excellence.
 
-I am passionate about technological innovation and am constantly learning to stay abreast of the latest trends in front-end and back-end development and cybersecurity.
+                    I am passionate about continuous learning and technological innovation, always staying up to date
+                    with the latest trends in front-end and back-end development.
                   </p>
                 </div>
               </div>
             </div>
-            <a class="button button-a button-big button-rouded" href="https://api.whatsapp.com/send/?phone=%2B201003702328&text&type=phone_number&app_absent=0">Download Cv</a>
+            <a class="button button-a button-big button-rouded"
+              href="https://api.whatsapp.com/send/?phone=%2B201003702328&text&type=phone_number&app_absent=0">Download
+              Cv</a>
           </div>
         </div>
       </div>
@@ -466,7 +483,7 @@ I am passionate about technological innovation and am constantly learning to sta
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">
-                      <a href="./CareerPath/full-stack.html">Full Stack Engineer
+                      <a href="./CareerPath/full-Stack.html">Full Stack Engineer
                       </a>
                     </h2>
                     <div class="w-more">
@@ -757,7 +774,7 @@ I am passionate about technological innovation and am constantly learning to sta
                               class="ion-social-instagram"></i></span></a>
                       </li>
                       <li>
-                        <a href="https://x.com/abdoullaheldeeb"><span class="ico-circle"><i
+                        <a href="https://x.com/abdoullah_deeb"><span class="ico-circle"><i
                               class="ion-social-twitter"></i></span></a>
                       </li>
                       <li>
@@ -788,7 +805,7 @@ I am passionate about technological innovation and am constantly learning to sta
               </p>
               <div class="credits">
                 Design and Programming
-                <a href="https://abdoullaheldeeb.github.io/">Abdoullah Eldeeb</a>
+                <a href="httpshttps://AbdoullahELdeeb.github.io">Abdoullah Eldeeb</a>
               </div>
             </div>
           </div>
@@ -820,5 +837,3 @@ I am passionate about technological innovation and am constantly learning to sta
 </body>
 
 </html>
-
-
